--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Facebook Messenger bot built to work with heroku",
   "main": "index.js",
   "scripts": {
+		"start": "node index.js",
     "test": "hahaha"
   },
   "repository": {
