--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^0.16.2",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "moment": "^2.19.1",
     "request": "^2.83.0"
   }
 }
