--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tradingvalley-chatbot",
+  "name": "nccucs_fintech_rentinghouse",
   "version": "1.0.0",
   "description": "A Facebook Messenger bot built to work with heroku",
   "main": "index.js",
@@ -27,10 +27,13 @@
   },
   "homepage": "https://github.com/brandonbrown/fb-bot-heroku#readme",
   "dependencies": {
+    "async": "^2.6.0",
     "axios": "^0.16.2",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "jsonfile": "^4.0.0",
     "moment": "^2.19.1",
+    "node-array": "0.0.7",
     "request": "^2.83.0"
   },
   "devDependencies": {}
